# rust_syntax_basics

./: Cargo.toml  README.md
01_base/data_type/src/: main.rs
01_base/function/src/: main.rs
01_base/hello_world/: hello_world.rs  readme.md
01_base/loop_structure/: Cargo.toml
01_base/loop_structure/src/: main.rs
02_ownership/function_param/: Cargo.toml
02_ownership/function_param/src/: main.rs
02_ownership/move_feature/: Cargo.toml
02_ownership/move_feature/src/: main.rs
02_ownership/scope/src/: main.rs
02_ownership/string/src/: main.rs
03_struct/struct_basic/src/: main.rs
03_struct/struct_example/src/: main.rs
03_struct/struct_methods/src/: main.rs
03_struct/tuple_struct/src/: main.rs
04_enum/enum_define/: Cargo.toml
04_enum/enum_define/src/: main.rs
04_enum/if_let/src/: main.rs
04_enum/match_use/: Cargo.toml
04_enum/match_use/src/: main.rs
04_enum/option/src/: main.rs
05_package_crate_module/module_and_file/: Cargo.toml
05_package_crate_module/package_crate_module_usage/: Cargo.toml
05_package_crate_module/package_usage/: Cargo.toml
05_package_crate_module/super_pub_struct_enum/: Cargo.toml
06_common_sets/string_new_update/: Cargo.toml
06_common_sets/vector_enum/: Cargo.toml
07_error_handler/result_recover_error/: Cargo.toml
07_error_handler/resut_unrecover_error/: Cargo.toml
07_error_handler/when_use_panic/: Cargo.toml
08_generic_trait_lifetime/extract_function_eliminate_duplication/: Cargo.toml
08_generic_trait_lifetime/generic_program/: Cargo.toml
08_generic_trait_lifetime/trait_ways/: Cargo.toml
(+25 files in other folders)
