[workspace]
resolver = "2"
members = [
    "01_base/data_type",
    "01_base/function",
    "01_base/hello_world",
    "01_base/loop_structure",
    "02_ownership/string",
    "02_ownership/scope",
    "02_ownership/move_feature",
    "02_ownership/function_param",
    "03_struct/struct_basic",
    "03_struct/tuple_struct",
    "03_struct/struct_example",
    "03_struct/struct_methods",
    "04_enum/enum_define",
    "04_enum/option",
    "04_enum/match_use",
    "04_enum/if_let",
    "05_package_crate_module/package_usage",
    "05_package_crate_module/package_crate_module_usage",
    "05_package_crate_module/path",
    "05_package_crate_module/super_pub_struct_enum",
    "05_package_crate_module/use_keyword",
    "05_package_crate_module/pub_use",
    "05_package_crate_module/module_and_file",
    "06_common_sets/vector",
    "06_common_sets/hashmap",
    "06_common_sets/vector_enum",
    "06_common_sets/string_new_update",
    "07_error_handler/panic",
]
